# Pytest

./: README.md  pyproject.toml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
codigo/: Product.py
tests/: test_primeiro_teste.py
